--- a/src/styles/cover-ui.scss
+++ b/src/styles/cover-ui.scss
@@ -1,169 +1,175 @@
 // cover some ewan-ui styles
-.el-breadcrumb__inner,
-.el-breadcrumb__inner a {
-    font-weight: 400 !important;
-}
-
-.el-upload {
-    input[type="file"] {
-        display: none !important;
-    }
-    .el-icon-close {
-        font-size: 14px;
-    }
-}
-
-.el-upload__input {
-    display: none;
-}
-
-.cell {
-    .el-tag {
-        margin-right: 0px;
-    }
-}
-
-.small-padding {
-    .cell {
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-}
-
-.fixed-width {
-    .el-button--mini {
-        padding: 7px 10px;
-        width: 60px;
-    }
-}
-
-.status-col {
-    .cell {
-        padding: 0 10px;
-        text-align: center;
-
-        .el-tag {
-            margin-right: 0px;
-        }
-    }
-}
+//.el-breadcrumb__inner,
+//.el-breadcrumb__inner a {
+//    font-weight: 400 !important;
+//}
+//
+//.el-radio-button--mini .el-radio-button__inner {
+//    padding: 4px 20px;
+//    font-size: 14px;
+//    border-radius: 0
+//}
+//
+//.el-upload {
+//    input[type="file"] {
+//        display: none !important;
+//    }
+//    .el-icon-close {
+//        font-size: 14px;
+//    }
+//}
+//
+//.el-upload__input {
+//    display: none;
+//}
+//
+//.cell {
+//    .el-tag {
+//        margin-right: 0px;
+//    }
+//}
+//
+//.small-padding {
+//    .cell {
+//        padding-left: 5px;
+//        padding-right: 5px;
+//    }
+//}
+//
+//.fixed-width {
+//    .el-button--mini {
+//        padding: 7px 10px;
+//        width: 60px;
+//    }
+//}
+//
+//.status-col {
+//    .cell {
+//        padding: 0 10px;
+//        text-align: center;
+//
+//        .el-tag {
+//            margin-right: 0px;
+//        }
+//    }
+//}
 
 // to fixed https://github.com/ElemeFE/element/issues/2461
-.el-dialog {
-    transform: none;
-    left: 0;
-    position: relative;
-    margin: 0 auto;
-    .el-dialog__headerbtn {
-        font-size: 22px;
-    }
-    .el-form-item--mini.el-form-item .el-form-item--mini.el-form-item {
-        margin-bottom: 0;
-    }
-    .el-form .el-form-item:last-child {
-        margin-bottom: 0;
-    }
-}
+//.el-dialog {
+//    transform: none;
+//    left: 0;
+//    position: relative;
+//    margin: 0 auto;
+//    .el-dialog__headerbtn {
+//        font-size: 22px;
+//    }
+//    .el-form-item--mini.el-form-item .el-form-item--mini.el-form-item {
+//        margin-bottom: 0;
+//    }
+//    .el-form .el-form-item:last-child {
+//        margin-bottom: 0;
+//    }
+//}
 
 // refine element ui upload
-.upload-container {
-    .el-upload {
-        width: 100%;
-
-        .el-upload-dragger {
-            width: 100%;
-            height: 200px;
-        }
-    }
-}
+//.upload-container {
+//    .el-upload {
+//        width: 100%;
+//
+//        .el-upload-dragger {
+//            width: 100%;
+//            height: 200px;
+//        }
+//    }
+//}
 
 // dropdown
-.el-dropdown-menu {
-    a {
-        display: block
-    }
-}
-
-// fix date-picker ui bug in filter-item
-.el-range-editor.el-input__inner {
-    display: inline-flex !important;
-}
-
-
-//输入框
-.el-input__inner{
-    border: 1px solid #F6F7FB;
-}
-.el-input.is-active .el-input__inner, .el-input__inner:focus{
-    border-color: #A2C9FF;
-}
-.el-cascader .el-input .el-input__inner:focus, .el-cascader .el-input.is-focus .el-input__inner {
-    border-color: #A2C9FF;
-}
-
-//日期
-.el-date-editor .el-range-input {
-    background-color: #F6F7FB;
-}
-.el-range-editor--mini .el-range__close-icon, .el-range-editor--mini .el-range__icon {
-    line-height: 16px;
-}
-
-//图片
-.el-image-viewer__close{
-    color: #fff;
-}
-
-//开关
-.el-switch {
-    height: 16px;
-
-    .el-switch__core {
-        width: 32px !important;
-        height: 16px;
-
-        &::after {
-            width: 14px;
-            height: 14px;
-
-            top: 0;
-        }
-    }
-
-    &.is-checked {
-        .el-switch__core {
-            &::after {
-                margin-left: -15px;
-            }
-        }
-    }
-}
-
-//输入框
-.el-input.is-disabled .el-input__inner {
-    background-color: #F1F1F1;
-}
-
-.el-select {
-    .el-tag.el-tag--info{
-        color: #333;
-    }
-}
-
-
-//消息提示
-.el-message {
-    word-break: break-all;
-}
-
-
-//文字提示
-.el-tooltip__popper.is-dark {
-    white-space: pre-line;
-}
+//.el-dropdown-menu {
+//    a {
+//        display: block
+//    }
+//}
+//
+//// fix date-picker ui bug in filter-item
+//.el-range-editor.el-input__inner {
+//    display: inline-flex !important;
+//}
+//
+//
+////输入框
+//.el-input__inner{
+//    border: 1px solid #F6F7FB;
+//}
+//.el-input.is-active .el-input__inner, .el-input__inner:focus{
+//    border-color: #A2C9FF;
+//}
+//.el-cascader .el-input .el-input__inner:focus, .el-cascader .el-input.is-focus .el-input__inner {
+//    border-color: #A2C9FF;
+//}
+//
+////日期
+//.el-date-editor .el-range-input {
+//    background-color: #F6F7FB;
+//}
+//.el-range-editor--mini .el-range__close-icon, .el-range-editor--mini .el-range__icon {
+//    line-height: 16px;
+//}
+//
+////图片
+//.el-image-viewer__close{
+//    color: #fff;
+//}
+//
+////开关
+//.el-switch {
+//    height: 16px;
+//
+//    .el-switch__core {
+//        width: 32px !important;
+//        height: 16px;
+//
+//        &::after {
+//            width: 14px;
+//            height: 14px;
+//
+//            top: 0;
+//        }
+//    }
+//
+//    &.is-checked {
+//        .el-switch__core {
+//            &::after {
+//                margin-left: -15px;
+//            }
+//        }
+//    }
+//}
+//
+////输入框
+//.el-input.is-disabled .el-input__inner {
+//    background-color: #F1F1F1;
+//}
+//
+//.el-select {
+//    .el-tag.el-tag--info{
+//        color: #333;
+//    }
+//}
+//
+//
+////消息提示
+//.el-message {
+//    word-break: break-all;
+//}
+//
+//
+////文字提示
+//.el-tooltip__popper.is-dark {
+//    white-space: pre-line;
+//}
 
 //表格
-.el-table {
+.report-table.el-table {
     border-radius: 4px;
     color: #000;
     //table {
@@ -258,15 +264,16 @@
     }
 }
 
-.el-table .sort-caret.ascending, .el-table .sort-caret.descending{
+.report-table.el-table .sort-caret.ascending,
+.report-table.el-table .sort-caret.descending{
     border-width: 8px;
     border-left-width: 3px;
     border-right-width: 3px;
 }
-.el-table .sort-caret.ascending{
+.report-table.el-table .sort-caret.ascending{
     top: 0px;
 }
-.el-table .sort-caret.descending{
+.report-table.el-table .sort-caret.descending{
     bottom: 0px;
 }
 .el-cell-flex {
@@ -283,29 +290,31 @@
     }
   }
 
-.el-table__body tr.current-row>td {
+.report-table .el-table__body tr.current-row>td {
     background-color: #FFF4E2;
 }
 
-.el-table .cell, .el-table--border td:first-child .cell, .el-table--border th:first-child .cell {
+.report-table.el-table .cell, 
+.report-table.el-table--border td:first-child .cell,
+.report-table.el-table--border th:first-child .cell {
     padding-left: 8px;
 }
-.el-table--mini .el-table__header th {
+.report-table.el-table--mini .el-table__header th {
     padding: 1px 0;
     height: 36px;
 }
 // .el-table--mini .el-table__body tr {
 //     // height: 48px;
 // }
-.el-table__fixed {
+.report-table.el-table__fixed {
     height: auto !important;
     bottom: 10px;
 }
 
-//表单
-.el-form-item--mini .el-form-item__content, .el-form-item--mini .el-form-item__label {
-    line-height: 24px;
-}
+////表单
+//.el-form-item--mini .el-form-item__content, .el-form-item--mini .el-form-item__label {
+//    line-height: 24px;
+//}
 
 
 
@@ -357,31 +366,32 @@
 
 
 // dialog
-.el-dialog {
-    border-radius: 4px;
-}
-.el-dialog__body {
-    padding: 24px;
-}
+//.el-dialog {
+//    border-radius: 4px;
+//}
+//.el-dialog__body {
+//    padding: 24px;
+//}
+//
+//
+//// icon
+//.el-icon-close {
+//    //font-size: 22px;
+//    &:hover {
+//        color: #1677FF;
+//    }
+//}
+//.el-popconfirm__icon {
+//    font-size: 16px;
+//}
+//
+//
+//// btn
+//.el-button--danger.is-disabled, .el-button--danger.is-disabled:active, .el-button--danger.is-disabled:focus, .el-button--danger.is-disabled:hover {
+//    color: rgba(253, 118, 115, .5);
+//}
 
-
-// icon
-.el-icon-close {
-    //font-size: 22px;
-    &:hover {
-        color: #1677FF;
-    }
-}
-.el-popconfirm__icon {
-    font-size: 16px;
-}
-
-
-// btn
-.el-button--danger.is-disabled, .el-button--danger.is-disabled:active, .el-button--danger.is-disabled:focus, .el-button--danger.is-disabled:hover {
-    color: rgba(253, 118, 115, .5);
-}
-.el-table .el-popover__reference {
+.report-table.el-table .el-popover__reference {
     &.el-button--text {
         color: #1677FF;
         &.is-disabled {
@@ -401,43 +411,50 @@
         color: #333333;
     }
 }
+//
+//
+//// popover
+//.el-popover {
+//    min-width: 130px;
+//    .el-popconfirm__main {
+//        margin-bottom: 12px;
+//    }
+//}
+//
+//// form item
+//.el-textarea__inner{
+//    border: 1px solid #F6F7FB;
+//}
+//.el-cascader__search-input {
+//    background-color: #F6F7FB;
+//}
+//.el-select-dropdown__empty {
+//    padding: 10px 15px;
+//}
+//
+//// coustom table header''
+//.el-tb-wcell {
+//    line-height: 1.2;
+//}
+//
+//
+//
+//
+//// new ui version for condition, its need integrate to ewan-ui
+//
+//// select
+//.el-select {
+//    .el-select__tags {
+//      outline: none;
+//    }
+//  }
 
-
-// popover
-.el-popover {
-    min-width: 130px;
-    .el-popconfirm__main {
-        margin-bottom: 12px;
+.admin-condition {
+    .el-button--mini,
+    .el-button--mini.is-round {
+    padding: 4px 20px
     }
 }
-
-// form item
-.el-textarea__inner{
-    border: 1px solid #F6F7FB;
-}
-.el-cascader__search-input {
-    background-color: #F6F7FB;
-}
-.el-select-dropdown__empty {
-    padding: 10px 15px;
-}
-
-// coustom table header''
-.el-tb-wcell {
-    line-height: 1.2;
-}
-
-
-
-
-// new ui version for condition, its need integrate to ewan-ui
-
-// select
-.el-select {
-    .el-select__tags {
-      outline: none;
-    }
-  }
 
 // change ui to new fn
 .ewan-select-new {
@@ -618,11 +635,11 @@
 
 
 // cascader
-.el-cascader {
-    .el-cascader__tags {
-      outline: none;
-    }
-  }
+//.el-cascader {
+//    .el-cascader__tags {
+//      outline: none;
+//    }
+//  }
 
 .ewan-cascader-new {
 
