--- a/src/styles/cover-ui.scss
+++ b/src/styles/cover-ui.scss
@@ -172,6 +172,7 @@
 .report-table.el-table {
     border-radius: 4px;
     color: #000;
+    box-shadow: 0 0 5px #d0d2d7;
     //table {
     //    border-collapse:collapse;
     //}
